K8S/details-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: detailnpservice-srv
spec:
  type: NodePort
  selector:
    app: detailservice
  ports:
    - name: detailservice
      protocol: TCP
      port: 80
      targetPort: 80
