K8S/providers-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: providers-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: providerservice
  template:
    metadata:
      labels:
        app: providerservice
    spec:
      containers:
        - name: providerservice
          image: ugr19/providerservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: providers-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: providerservice
  ports:
  - name: providerservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: providergrpc
    protocol: TCP
    port: 666
    targetPort: 666
